2006-05-01  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml: Wrote most of Navigation section, now
        including Session History as well. Also defined "browsing context"
        in a way that should be more compatible with Web Apps 1.0.

        Regenerated:
        
        * publish/Window.html:
        * publish/respec-w3c.css:

2006-04-04  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml: Added ISSUE and ACTION numbers for many editor's
        notes.
        * publish/Window.html: Regenreated.

2006-04-03  Maciej Stachowiak  <mjs@apple.com>

        - removed this draft, all changes are folded into the master copy now

        * source/ED-window-20060306.xml: Removed.

2006-03-30  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml: Updated for many of Ian Hickson's review comments.
        
        Regenerated:
        
        * publish/Window.html:
        * publish/respec-w3c.css:

2006-03-27  Maciej Stachowiak  <mjs@apple.com>

        - replaced refereces to fictitious core:: IDL module with dom::
        - properly qualified DOMStrings as dom::DOMString

        * publish/Window.html:
        * source/Window.xml:

2006-03-26  Maciej Stachowiak  <mjs@apple.com>

        - completed acknowledgements (I think I got everyone who made a
          suggestion that was actually taken)
        - improved use of dfn/term
        - marked informative sections as such properly
        - added explanation of styling for definitions and def references
        
        * source/Window.xml:
        
        Regenerated:
        
        * publish/Window.html:
        * publish/respec-w3c.css:

2006-03-25  Anne van Kesteren  <annevk@opera.com>

        * source/Window.xml: changed the language, markup, reformatted and
        fixed the CDR section and made some small editorial changes

2006-03-25  Maciej Stachowiak  <mjs@apple.com>

        * source/Window.xml:
        - added Anne's text for the Embedding section
        