@@ -6,7 +6,7 @@
           regenerated.
           ******* WARNING ********
         --><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Window Object 1.0</title><link rel="stylesheet" href="respec-w3c.css" type="text/css"></link><link rel="stylesheet" href="http://www.w3.org/StyleSheets/TR/base" type="text/css"></link><meta name="revision" content="$Id: Window.html,v 1.11 2006-05-01 10:38:12 mstachow Exp $"></meta></head><body><div class="head"><p><a href="http://www.w3.org/"><img class="head" src="http://www.w3.org/Icons/w3c_home" width="72" height="48" alt="W3C"></img></a></p><h1 class="head">Window Object 1.0</h1><h2 id="pagesubtitle">W3C Editor's Draft <em>30 March 2006</em></h2><dl><dt>This version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Latest version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Editors:</dt><dd><span class="person">Ian Davis (<a href="http://www.talis.com/">Talis Information Ltd.</a>) &lt;<a href="mailto:ian.davis@talis.com">ian.davis@talis.com</a>&gt;</span></dd><dd><span class="person">Maciej Stachowiak (<a href="http://apple.com/">Apple Computer, Inc.</a>) &lt;<a href="mailto:mjs@apple.com">mjs@apple.com</a>&gt;</span></dd></dl><p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> ©2006
+<title>Window Object 1.0</title><link rel="stylesheet" href="respec-w3c.css" type="text/css"></link><link rel="stylesheet" href="http://www.w3.org/StyleSheets/TR/base" type="text/css"></link><meta name="revision" content="$Id: Window.html,v 1.12 2006-05-01 18:42:18 mstachow Exp $"></meta></head><body><div class="head"><p><a href="http://www.w3.org/"><img class="head" src="http://www.w3.org/Icons/w3c_home" width="72" height="48" alt="W3C"></img></a></p><h1 class="head">Window Object 1.0</h1><h2 id="pagesubtitle">W3C Editor's Draft <em>01 May 2006</em></h2><dl><dt>This version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Latest version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Editors:</dt><dd><span class="person">Ian Davis (<a href="http://www.talis.com/">Talis Information Ltd.</a>) &lt;<a href="mailto:ian.davis@talis.com">ian.davis@talis.com</a>&gt;</span></dd><dd><span class="person">Maciej Stachowiak (<a href="http://apple.com/">Apple Computer, Inc.</a>) &lt;<a href="mailto:mjs@apple.com">mjs@apple.com</a>&gt;</span></dd></dl><p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> ©2006
         <a href="http://www.w3.org/"><acronym title="World Wide Web Consortium">W3C</acronym></a><sup>®</sup>
         (<a href="http://www.csail.mit.edu/"><acronym title="Massachusetts Institute of Technology">MIT</acronym></a>,
         <a href="http://www.ercim.org/"><acronym title="European Research Consortium for Informatics and Mathematics">ERCIM</acronym></a>,
