@@ -5,7 +5,7 @@
   <metadata>
     <title>Window Object 1.0</title>
     <styling type='W3C' status='ED'/>
-    <date year='2006' month='03' day='30'/>
+    <date year='2006' month='05' day='01'/>
     <editors>
       <person>
         <name>Ian Davis</name>
@@ -295,7 +295,7 @@
       event MUST be the <code>Window</code> object where the user originated the
       event. 
 
-<ednote>ISSUE-63: Should Window 1.0 drop the arguably redundant requirment on UIEvent.view?</ednote>
+<ednote>ISSUE-63: Should Window 1.0 drop the arguably redundant requirement on UIEvent.view?</ednote>
 
 <ednote>ISSUE-64: Should the Window spec define Window's place in DOM event flow?</ednote>
     </p>
@@ -306,7 +306,7 @@
       <p>The <dfn><code>Window</code> interface</dfn> is fully
       specified in IDL in the <a href="#idl">IDL Definitions
       Appendix</a>. To better organize this specification, it is
-      described in prose in mulitple IDL fragments.</p>
+      described in prose in multiple IDL fragments.</p>
 
       <p>The <term><code>Window</code> interface</term> inherits from
       the <code>AbstractView</code> interface [DOM2Views].</p>
@@ -416,7 +416,7 @@ interface DocumentWindow : views::DocumentView {
         the document, if any. In addition to the
         <code>AbstractView</code> interface, the default view MUST
         implement the <code>Window</code> interface. If a document is
-	not being presented in a <term>browsing context</term> but nontheless
+	not being presented in a <term>browsing context</term> but nonetheless
 	implements the DocumentWindow interface, the value of the
         <code>defaultView</code> attribute MUST be
         <code>null</code>. <ednote>ISSUE-66: should Documents that
@@ -441,7 +441,7 @@ interface DocumentWindow : views::DocumentView {
     navigation familiar to browser users.</p>
 
     <p>When a <term>browsing context</term> changes from one
-    <term>current loation</term> to another, it is said to perform a
+    <term>current location</term> to another, it is said to perform a
     <dfn>navigation</dfn> to a <dfn>target location</dfn>, as specified
     by an absolute URI reference.</p>
 
@@ -465,7 +465,7 @@ interface DocumentWindow : views::DocumentView {
     new <term>document</term>. In particular, they MUST NOT be updated
     while still presenting the last <term>document</term> (if
     different from the new one), and MUST be updated when presenting
-    even a partialy loaded portion of the new
+    even a partially loaded portion of the new
     <term>document</term>.</p>
 
     <p>When a <term>navigation</term> is performed to a <term>target
@@ -520,7 +520,7 @@ interface DocumentWindow : views::DocumentView {
     <section xml:id='navigation-algorithms'>
       <title>Navigation Algorithms</title>
 
-	<p>All requirements for performing alogorithms are "as if"
+	<p>All requirements for performing algorithms are "as if"
 	requirements - all observable behavior must be as if the
 	<term>conforming implementation</term> had performed the
 	required steps, but this specification makes no requirements
@@ -530,7 +530,7 @@ interface DocumentWindow : views::DocumentView {
 	  <title>URI Parsing</title>
 
 	<p>The following algorithms are applied when parsing absolute
-	URI references into components. Absolute URI referencess are
+	URI references into components. Absolute URI references are
 	parsed according to Uniform Resource Identifiers (URI):
 	Generic Syntax [RFC2396], but the strings of interest when
 	dealing with <term>browsing context</term>
@@ -608,7 +608,7 @@ interface DocumentWindow : views::DocumentView {
 	  <ol>
 	    <li>If <var>URI-Ref</var> is hierarchical and has a
 	    non-empty query [RFC2396], or has an empty query and
-	    <var>preserve-emtpy</var> is true, return the
+	    <var>preserve-empty</var> is true, return the
 	    concatenation of a question mark (?) and the query; and do
 	    not proceed to step 2. Otherwise go to step 2.</li>
 
@@ -736,7 +736,7 @@ interface DocumentWindow : views::DocumentView {
 	</ol>
 
 	<p>When a <term>browsing context</term> is REQUIRED to
-	<dfn>replace the curent location</dfn> with a specified URI
+	<dfn>replace the current location</dfn> with a specified URI
 	<var>new-uri</var>, it MUST perform the following steps:</p>
 
 	<ol>
@@ -940,7 +940,7 @@ interface Location {
           The value of the <term><code>hash</code></term> attribute MUST be the
           result of
           <term>parseHash</term>(<term>current-location</term>, false).
-	  When this atribute is set to a new value
+	  When this attribute is set to a new value
           <var>new-hash</var>, user agents MUST NOT change the value
           of the <term><code>hash</code></term> attribute but instead MUST perform
           the following steps:
@@ -1444,7 +1444,7 @@ interface TimerListener {
 
     <p>
       Special thanks to Anne van Kesteren for writing the Embedding
-      section and many other additions and improvenets.
+      section and many other additions and improvements.
     </p>
 
     <p>
