@@ -1,5 +1,15 @@
 2006-05-01  Maciej Stachowiak  <mjs@apple.com>
 
+        - fix typos found be spell checker. update date.
+        
+        * source/Window.xml:
+        
+        Regenerated.
+
+        * publish/Window.html:
+
+2006-05-01  Maciej Stachowiak  <mjs@apple.com>
+
         * source/Window.xml: Wrote most of Navigation section, now
         including Session History as well. Also defined "browsing context"
         in a way that should be more compatible with Web Apps 1.0.
